Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111347

QMessageAuthenticationCode is not re-entrant

    XMLWordPrintable

Details

    • 5
    • ac9d25340 (dev), d1a7e9f49 (6.5), ada434448 (6.4), 2449af142 (dev), d32d2137b (dev), 999adf1a5 (6.4), f28275617 (6.5), 9a289b727 (6.5), a3abceaa0 (tqtc/lts-6.2), fe5b1e019 (tqtc/lts-6.2), 6efa5876a (tqtc/lts-5.15), 15cedcab5 (tqtc/lts-5.15)
    • Foundation Sprint 76

    Description

      QMessageAuthenticationCode is not re-entrant. Its result() function is const, but mutates the object in order to finalize the hash.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-111347
          # Subject Branch Project Status CR V

          Activity

            People

              mmutz Marc Mutz
              mmutz Marc Mutz
              Vladimir Minenko Vladimir Minenko
              Alex Blasche Alex Blasche
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: