QMessageAuthenticationCode: Extract Methods finalize{,Unchecked}() from result()

This brings the code in line with its sibling code in
QCryptographicHash and prepares for a static hash() optimization and
the fixing of the result() re-entrancy issue (QTBUG-111347).

Manual conflict resolutions:
 - no QCryptographicHash::resultView() in this branch

Task-number: QTBUG-111347
Change-Id: I3d0c0cd2a37c2bbeb60974307ff138e26b82bf69
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit ac9d25340aec5c165db5e58a3d8b869967c5ff97)